[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "demo_process_model"
dynamic = ["version"]
requires-python = ">=3.12"
authors = [
    {name = "Simon Wilson", email = "simon.wilson@historicengland.org.uk"},
]

dependencies = [
    "git+https://github.com/HistoricSimonW/Process-Model",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/process_model/_version.py"